Added theme controller and responsiveness improvement

--- a/src/app.css
+++ b/src/app.css
@@ -79,6 +79,9 @@
 
 html {
 	scroll-behavior: smooth;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
 
 ::-webkit-scrollbar {
