--- a/src/app.css
+++ b/src/app.css
@@ -86,14 +86,10 @@ html {
 
 ::-webkit-scrollbar {
 	width: 4px;
-	height: 6px;
+	height: 12px;
 }
 
 ::-webkit-scrollbar-thumb {
 	background-color: rgba(160, 160, 160, 0.5);
-	border-radius: 4px;
-}
-
-::-webkit-scrollbar-track {
-	background-color: rgba(0, 0, 0, 0);
+	cursor: pointer;
 }
